fixed styling bugs (dot spacing) and updated style for function descriptions

--- a/css/colors/officialskin.css
+++ b/css/colors/officialskin.css
@@ -27,13 +27,37 @@ PAGE: TEAM
 	
 	position: static;
 	padding: none;
-	margin-top: -55px;
+/*	margin-top: -30px;*/
 	text-align: center;
 }
 
 /*****************************************
 PAGE: APP
 *****************************************/
+
+#app {
+    /*margin-top: -100px;*/
+}
+
+#app-title {
+    /*margin-top: 50px;*/
+}
+
+.func {
+    padding: 30px;
+}
+
+.func-images {
+    display: block;
+    float: left;
+    max-width: 200px;
+    margin: 0 auto 30px;
+    /*padding-bottom: 100px;*/
+}
+
+.func-text, .func-title {
+    text-align: center;
+}
 
 /*.how-it-works {
     background: #f2f2f2;
@@ -67,7 +91,10 @@ PAGE: APP
     font-size: 18px;
     line-height: 26px;
     font-weight: 200;
+}
 
+.steps ul {
+    margin-right: 15px;
 }
 
 /*.how-it-works */.steps li:before {
@@ -79,12 +106,16 @@ PAGE: APP
     background: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2220%22%20height%3D%226%22%3E%3Ccircle%20fill%3D%22%23CDCDCD%22%20cx%3D%223%22%20cy%3D%223%22%20r%3D%223%22/%3E%3C/svg%3E') repeat-x top left;
     -webkit-background-size: 20px 6px;
     background-size: 20px 6px;
-    background-position: -101px;
+    background-position: 20px;
+}
+
+.steps li:first-child {
+    background: none;
 }
 
 /*.how-it-works */.steps li:first-child:before {
+    content: "";
     display: none;
-
 }
 
 /*.how-it-works */.number {
@@ -92,16 +123,15 @@ PAGE: APP
     width: 110px;
     height: 110px;
     border-radius: 110px;
-    background: #212725;
+    background: #a0ce4e;
     color: #fff;
     line-height: 110px;
     font-size: 50px;
     font-weight: 200;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     margin-left: 20px;
     margin-right: 10px;
-    /*padding: 20px;*/
 }
 
 @media screen and (min-width:1200px) {
@@ -204,4 +234,13 @@ PAGE: APP
         font-size: 24px;
         margin-bottom: 12px;
     }
+}
+
+
+/*
+    PARALLAX
+*/
+
+.bg1, .parallax-bg, .parallax{
+    background: #a0ce4e;
 }
